--- a/obsidian/RC/2. Aplication Layer.md
+++ b/obsidian/RC/2. Aplication Layer.md
@@ -118,7 +118,7 @@ Ciclo:
 4. TCP connection fecha.
 
 ___HTTP Object___: identificado por um URL.
-##### Non-persistent HTTP
+### Non-persistent HTTP
 Pelo menos um objeto é mandado pela conexão TCP.
 Browser pode abrir conexões paralelas.
 HTTP/1.0.
@@ -130,13 +130,78 @@ UM RTT par um HTTP request e alguns primeiros bytes da resposta HTTP.
 Tempo de transmissão do file.
 
 ``TOTAL = 2 x RTT + transmit time``
-##### Persistent HTTP
+### Persistent HTTP
 Multiples objets podem ser mandados por uma só TCP connection entre cliente e servidor.
-Com pipelining o broser pode mandar requests assim que os identificar.
+Com pipelining o broser pode mandar requests assim que os identificar. Ou seja, cliente manda request assim que encontra o objeto. (apenas 1 RTT para referenciar todos os objetos).
 HTTP/1.1.
+Server deixa conexão aberta depois de enviar resposta.
+1 RTT por objetivo depois do primeiro.
+
+#### HTTP Request Message
+
+EXistem apenas 2 tipos: _request_ e _response_.
+
+Uma request tem uma __request line__ (indica protocolo e teipo de pedido) que pode ser um _GET_ ou um _POST_ ou _HEAD_ seguido de __header lines__. No final indica conteúdo da mensagem a ser transmitida.
+
+````http
+POST /submeterFicheiro HTTP/1.1
+Host: website.com
+User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:102.0) Gecko/20100101 Firefox/102.0
+Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,*/*;q=0.8
+Accept-Language: en-US,en;q=0.5
+Accept-Encoding: gzip, deflate
+Connection: close
+Upgrade-Insecure-Requests: 1
+
+dados dados dados dados
+````
+
+Uma response tem uma __status line__ (indica protocolo e código de resposta) que é um código estado de protocolo seguido de __header lines__ a terminar com __data__ como por exemplo qual ficheiro HTML é requesitado.
+
+````http
+HTTP/2 200 OK
+Document-Policy: force-load-at-top
+Expires: Sat, 01 Jan 2000 00:00:00 GMT
+Content-Type: text/html; charset="utf-8"
+Date: Tue, 29 Nov 2022 02:14:22 GMT
+
+<!DOCTYPE html>
+<html lang="en" id="facebook" class="no_js">
+...
+````
+
+Exemplos de status line codes:
+
+- `200 OK` sucesso no request. Request mais tarde para a mesma mensagem.
+- `301 Moved Permanetly` Nova localização do objeto é especificada na mensagem (Localtion: ).
+- `400 Bad Request` Server não soube interpretar.
+- `404 Not Found` Não encontrado no server.
+- `505 HTTP Version Not Supported
+###### HTTP 1.0
+É não persistente.
+Cada objeto tem que ter uma sessão de TCP diferente.
+
+###### HTTP 1.1
+É persistente e assim permite transferência de vários objetos no mesmo TCP.
+Abre portas ao pipelining (cliente pode pedir logo o objeto em vez de esperar pela resposta do pedido antes de fazer o próximo).
 
 
+# Ligação TCP Resumida (.leic)
+
+1. Cliente envia ao servidor o comando `SYN` onde informa que quer estabelecer ligação enviando também o modo como é o setup.
+2. Servidor responde com `SYN` e `ACK` (Acnkowlege), informando as condições e aceitando condições do cliente.
+3. Cliente responde com `ACK` informando que aceita condições.
 
 
+![[Pasted image 20231120113813.png]]
 
+![[Pasted image 20231120113824.png]]
+
+
+### Get Condicional
+
+Browsers guardam objetos em cache para caso sejam precisos novamente não seja necessário transferir o ficheiro de novo mas se forem atualizados:
+
+- Cliente inclui header `If-Modified-Since: <data>`
+- Servidor responde com `304 Not Modified` ou resposta normal.
 
