--- a/obsidian/RC/2. Aplication Layer.md
+++ b/obsidian/RC/2. Aplication Layer.md
@@ -205,5 +205,23 @@ Browsers guardam objetos em cache para caso sejam precisos novamente não seja n
 - Cliente inclui header `If-Modified-Since: <data>`
 - Servidor responde com `304 Not Modified` ou resposta normal.
 
+## Cookies
+
+HTTP é stateless mas para casos como por exemplo um carrinho de compras é necessário cookies. Website interpreta e associa estado ou função a cada uma.
+
+
+## Web Caching: Proxy Server
+
+Cliente quando faz HTTP request em vez de ir para o server, o proxy responde. Manda requests para a cache.
+Se o objeto está na cache retorna o objeto, senão proxy dá request ao server e só aí retorna ao cliente.
+
+Cache é cliente e server.
+Instalada por ISP.
+
+Reduz tempo de resposta.
+Reduz tráfico.
+
+
+
 
 
