--- a/obsidian/RC/2. Aplication Layer.md
+++ b/obsidian/RC/2. Aplication Layer.md
@@ -209,7 +209,6 @@ Browsers guardam objetos em cache para caso sejam precisos novamente não seja n
 
 HTTP é stateless mas para casos como por exemplo um carrinho de compras é necessário cookies. Website interpreta e associa estado ou função a cada uma.
 
-
 ## Web Caching: Proxy Server
 
 Cliente quando faz HTTP request em vez de ir para o server, o proxy responde. Manda requests para a cache.
@@ -221,7 +220,87 @@ Instalada por ISP.
 Reduz tempo de resposta.
 Reduz tráfico.
 
+# HTTP 2.0
+
+Reduz a latência ativando todos os requests e responses através de multiplexing.
+
+Redução dos ovberheads (usa-se códigos para representar o conteúdo dos pedidos e respostas)
+
+**Push de servidor** - O servidor analisa o HTML e vê que outros ficheiros são necessários (e consequentemente, serão pedidos) e envia-os assim que possível, não sendo necessário um pedido por parte do sutilizador
+
+**Mitigação de HOL blocking- Os objetos são divididos em pacotes e a transferência é intercalada, de forma a transmitir os ficheiros mais pequenos primeiro:
+
+##### Sem mitigação:
+![[Pasted image 20231123102059.png]]
+
+##### Com mitigação:
+![[Pasted image 20231123102112.png]]
 
 
+# HTTP 3.0
+
+Adiciona segurança, melhor controlo de congestion (+ pipelining) do que UDP.
+
+Tem no lugar do protocolo de comunicação o protocolo QUIC e controla streams por ele mesmo.
+O HTTP2.0 é TCP e controla streams pelo HTTP layer.
+
+# File Transfer Protocol (FTP)
+
+![[Pasted image 20231123102932.png]]
+
+Transfere o ficheiro de/para o host remoto.
+Cliente: inicia transferência (de/para)
+Server: remote host.
+
+Quando o server recebe o comando de file transfer, o server abre uma 2ª ligação TCP por ficheiro para o cliente. 
+Depois de transferir um ficheiro fecha-se.
+Abre-se outra TCP para outro file.
+
+## Eletronic Mail
+
+Três componentes: User agents, Mail server e Simple mail transfer protocol (SMTP).
+
+#### User Agent
+Mail reader. Compõe, edita, lê mensagens.
+
+#### Mail Servers
+Mailbox tem mensagens para o user. Message queue.
+SMTP protocol entre mail server para mandar email messages.
+
+##### SMTP Protocol
+Usa TCP para mandar mensagem do cliente para o server.
+Porta 25.
+3 fases:
+- Handshaking("greeting");
+- Transfer of messages;
+- Closure.
+
+Portanto,
+Clientes mandam mensagem de email usando SMTP para o servidor que hospeda mails. Ainda através de SMTP transferem-se até ao servidor que hospeda o endereço de destino e finalemente o servidor entrega o mail usando o protocolo _mail acess_.
 
 
+Commands: ASCII text.
+Responses: código de estado e phrase.
+
+Comandos:
+- `HELO` e `EHLO` - dois servidores SMTP estabelecerem ligação.
+- `MAIL FROM` - remetente.
+- `RCTP TO` - destinatário.
+- `DATA` - dados a enviar.
+- `QUIT` - fecha ligação.
+
+### SMTP vs HTTP
+
+| SMTP | HTTP |
+| - | - |
+| persistent connections | - |
+| requer mensagem de 7 bits ASCII | - |
+| push app | pull app |
+| usa ASCII interaction, status codes | usa ASCII interaction, status codes |
+| multiple objects enviados em várias mensagens | objetos encapsulados em mensagens de resposta |
+
+
+# DNS - Domain Name System
+resumos.leic
+
+Porta 53.
