--- a/obsidian/RC/3. Transport Layer.md
+++ b/obsidian/RC/3. Transport Layer.md
@@ -110,7 +110,7 @@ Tem um _timeout_ já que os pacots podes nunca chegar. Se estiver à espera de u
 
 Ver slides das contas. página 26.
 
-#### Sliding Window
+##### Sliding Window
 
 ![[0003-StopAndWait.svg]]
 
