--- a/obsidian/RC/4. Network Layer.md
+++ b/obsidian/RC/4. Network Layer.md
@@ -1,3 +1,72 @@
+Sending side: segmentos em datagrams.
+Receiving side: envia segmentos ao transport layer.
+
+Protocolos de Network layer são implementados em todo od hosts e routers.
+Routers examinam todos os headers em todos os IP datagrams que passam.
+
+## Key Functions
+
+##### Routing:
+Através de algoritmos determina para onde vai o socket.
+
+##### Forwarding:
+Move de um input para um output.
+
+### Data plane
+Local.
+Per-router function.
+Forwarding.
+
+### Control plane
+Network.
+Routing.
+
+## Traditional Routing Algorithms (per-router Control plane)
+Algoritmos individuais em todos os routers interagem entre si.
+
+## Software-Defined Networking (SDN) Control Plane
+Controladores remotos instalam forwarding nos routers. Separa control do data.
+
+# IPv4 Addressing Space
+N bits permitem 2^N endereços.
+
+### How does ISP get a block of addresses?
+___ICCAN___ - allocates addresses throught IANA, manages DNS.
+
+IP addresses have two components:
+
+- Network Identification (NetID)
+- Station interface identification (HostID)
+
+Stations com a mesma network comunicam diretamente.
+Stations com diferentes networks comunicam através de routers.
+
+### CIDR Classless IntereDomain Routing
+a.b.c.d/x
+subnet/host
+
+## Subnet
+
+Interfaces que podem chegar a outras sem um router.
+Dispositivos no mesmo subnet têm maior taxa de bits.
+Na host part restar menos bits.
+
+### IPv4 addresses
+
+127.0.0.1 - localhost
+
+Todos os endereços com station bits a zero representam Network Addresses.
+
+Endereços com station bits a um representam broadcast address.
+
+User only knows the application server address. For packets, to be transmitted we need to know the source, ports and IP add.
+
+Obtém-se o endereço Ip através do Application Layer usando DNS.
+
+## Forwarding Tables (slides)
+Bons exemplos.
+
+
 ## IP datagram format
 
 ### IP fragmentation (foto)
