--- a/obsidian/AMS/1. System Engeneering.md
+++ b/obsidian/AMS/1. System Engeneering.md
@@ -13,8 +13,8 @@
 
 Consiste em:
 
-- Identificar e quantidicar system goals.
-- Criação de design de conceitos de systemas alternativos.
+- Identificar e quantificar objetivos do sistema.
+- Criação de design de conceitos de sistemas alternativos.
 - Seleção e implementação do melhor design.
 - Verificação que o design implementado é o melhor.
 - Avaliação de Post-implementation para avaliar o quão bom o sistema atingiu os goals.
@@ -66,9 +66,9 @@ Tipos:
 
 Um modelo adequado é um que é suficiente para os propósitos requeridos não apenas por acidente nas também por o modelo ter propriedades que o fazem adequado aos seus propósitos.
 
-Um modelo adequado é auqel que tem propriedades que promovem o facto do output do modelo ser o desejado.
+Um modelo adequado é aquele que tem propriedades que promovem o facto do output do modelo ser o desejado.
 
-### RoME = Return  on Modelling Effort
+### RoME = Return on Modelling Effort
 
 Mede o benefício returnado pela criação, melhoria de um modelo considerando o esforço aplicado.
 Serve como critério de paragem a um modelling process.
