--- a/obsidian/AMS/2. ReqEng.md
+++ b/obsidian/AMS/2. ReqEng.md
@@ -1,11 +1,11 @@
 ##### System of Interest
-Sistema que pode ser entendido, criado, utilizado ou gerido pelas suas preocupações.
+Sistema gerido pelas suas preocupações.
 
 ##### Enabling System
-Sistemas fora dos limites de um sistema de interesse que requer funcionalidade mas sem ser necessárias as preocupações dos stakeholders.
+Sistema que requer funcionalidade sem querer saber das preocupações dos stakeholders.
 
 ##### System of systems
-Pode ser entendido coo feito de vários sitemas independentes para específicas preocupações de cada um deles.
+Pode ser entendido com o feito de vários sitemas independentes para específicas preocupações de cada um deles.
 
 As definições destes três tipos de sistemas estão relacionadas sempre com as suas preocupações e o contexto (ambiente envolvido).
 
