--- a/obsidian/RC/2. Aplication Layer.md
+++ b/obsidian/RC/2. Aplication Layer.md
@@ -301,6 +301,79 @@ Comandos:
 
 
 # DNS - Domain Name System
-resumos.leic
+convém ver no resumos.leic
 
-Porta 53.
+O que pode fazer:
+
+- Faz a tradução do Host name (www.ist.pt) para O IP através da porta 53.
+- Host aliasing: multiple to one.
+- Load distribuition: replica web servers (one to multiple).
+
+Não se cntraliza tudo num porqu eexistem várias desvantagens como  tráfico, single point of failure, distância da database e problemas de manutenção.
+
+Funciona por hierarquia portanto existe mais em cima a root que acede a um TLD (Top Level Domain) que acede a authoritave.
+
+#### Root Name Servers
+
+Contactados pelo local name server que não pode resolver o name.
+Contacta authoritative name server se o mapping não for conhecido.
+Obtém o mapping.
+Retorna o mapping ao local name server.
+
+### Queries
+
+#### Iterated
+No local DNS server pede host. Vai à root volta, vai ao TLD volta, vai ao authoritative buscar o host e volta.
+![[Pasted image 20231209125221.png]]
+
+#### Recursive
+No local pede host. Vai à root que vai ao TLD que vai ao authoritative e depois faz o caminho todo de volta.
+![[Pasted image 20231209125232.png]]
+
+### DNS Caching
+
+Quando um server faz mapping, it _caches_ that mapping.
+Entradas da cache desparecem depois de um tempo.
+TLD servers por norma são cached em local named serves.
+
+### DNS Records
+
+___DNS___: DB que armazena resource records (RR)
+
+RR formar: (name, value, type, ttl)
+
+##### Type = A:
+_name_ is hostname, _value_ is IP.
+
+##### Type = NS:
+_name_ is domain, _value_ is hostname of authoritative name.
+
+##### Type = CNAME:
+_name_ is alias name for some "canonical" name (um nome mais abeverbiado do que o que realmente é, _value_ is the canonical.
+
+##### Type = MX:
+_value_ is name of mailserver associado com _name_.
+
+### DNS Protocol
+_query_ e _reply_ messages ambas com o mesmo _message format_.
+
+Message Header:
+
+__Identification__: 16 bit a identificar a query. A resposta a esta query usa o mesmo número.
+__Flags__: query or reply, recursion desired, recursion available, reply is authoritative.
+
+![[Pasted image 20231209125508.png]]
+
+
+### Dynamic DNS
+
+Permite atualizar o endereço IP em tempo real em vez de esperar alguns dias.
+Outros sites na net podem estabelecer ligação à maquina sem pedir o IP.
+
+# P2P
+.leic
+
+
+
+
+
