--- a/obsidian/RC/4. Network Layer.md
+++ b/obsidian/RC/4. Network Layer.md
@@ -126,4 +126,19 @@ Endereços locais são insivíeis -> + segurança.
 
 NAT é que faz esta tradução dos endereços.
 
-Todos os dispositivos dentro de uma rede local partilham apenas um endereço IPv4
+Todos os dispositivos dentro de uma rede local partilham apenas um endereço IPv4.
+
+NAT é controverso:
+violates end-to-end.
+addresses deviam ser resolvidos pelo IPv6.
+
+#### NAT Transersal Problem
+
+- Solução 1: encaminhar para endereço publico para privado.
+
+- Solução 2: ___UPnP (Universal Plug and Play) ___e protocolo IGD (Internet Gateway Device)___: ?
+
+- Solução 3: ___Relaying___: cliente NAT estabelece ligação com o _Relay_, funcionando como intermediário. Cliente externo conecta-se ao _relay_ e encaminha pacotes entre as duas conexões.
+
+
+
