--- a/obsidian/RC/2. Aplication Layer.md
+++ b/obsidian/RC/2. Aplication Layer.md
@@ -2,8 +2,17 @@
 
 Para receber mensagens um processo tem que ter um _identifier_.
 Host tem um _32-bit IPv4_ e/ou _128-bit IPv6_ .
-Este Host IP não é suficiente para identificar a a aplicação em progresso já que muitas podem estar a ocorrer nele então nem tanto um _IP address_ como uma _Port number_.
+Este Host IP não é suficiente para identificar a a aplicação em progresso já que muitas podem estar a ocorrer nele então tem tanto um _IP address_ como uma _Port number_.
 
+##### IPv4
+32 bits separados por . em 4 grupos de 8 bits.
+Existem 2^32 IPs possíveis.
+
+##### IPv6
+128 bits separados por : em 8 grupos de 16 bits.
+
+
+## URL
 #### Aplication Layer Protocol
 
 Define:
