--- a/obsidian/RC/2. Aplication Layer.md
+++ b/obsidian/RC/2. Aplication Layer.md
@@ -10,15 +10,20 @@ Existem 2^32 IPs possíveis.
 
 ##### IPv6
 128 bits separados por : em 8 grupos de 16 bits.
+Existem 2¹²⁸ IPs possíveis. Mais do que suficiente.
 
+##### Portos
+IP identifica _host_ numa rede mas não qual é o processo da máquina com que pretende comunicar.
 
 ## URL
+![[Pasted image 20240106143003.png]]
+
 #### Aplication Layer Protocol
 
 Define:
 
-- Tipos de mensagens exchange. (request, response)
-- Message syntax (em que campo existe e quais os limites)
+- Tipos de mensagens trocadas. (request, response)
+- Message syntax
 - Message semantics (meaning of information)
 - Regras para quando a aplicação deve receber e responder a mensagens
 
@@ -29,7 +34,7 @@ __Proprietary protocols__: skype.
 
 O que Transport Layer requer:
 
-- __Data Integrity__: Some apps can tolerate loss. Others require 100% reliable data transfer.
+- __Data Integrity__: Algumas apps podem perder conteúdo (audio) outras precisam da info a 100% (file transfer=.
 - __Throughput__: Algumas apps precisam de um mínimo de throughput para serem "efetivas". Outras não se importam com isso sequer.
 - __Security__: Encryption, integridade da data. (não podem ser alterados)
 - __Timing__: algumas apps requerem low delay para serem "efetivas".
@@ -41,6 +46,7 @@ O que Transport Layer requer:
 - Connection-oriented.
 - Reliable transport entre mandar e receber processos.
 - Flow Control: Sender não saturar o receiver.
+- Congestion Control.
 - _Does not Provide_: timing, minimum throughtput guarantees, security.
 
 ###### UDP Service:
@@ -48,7 +54,7 @@ O que Transport Layer requer:
 - Unreliable data transfer entre mandar e receber.
 - _Does not provide_: connection setup, reliability, flow control, congestion control, timing, throughput e segurança.
 
-##### Transport Layer Security (TLS)
+##### TLS - Transport Layer Security
 Promete TCP connections encriptadas. Integridade da data e end-point authentication.
 
 #### Arquitetura Cliente-Servidor
@@ -109,12 +115,12 @@ UDP _provides_ unreliable transfer of groups of bytes entre cliente e server.
 - Cada mensagem lida com recvfrom() corresponde a uma única sendto().
 - Mensagem pode ser perdida.
 
-### WWW
+### WWW (World Wide Web)
 
-___HTTP___ - HyperText Transport Protocol. Protocolo usado para transferir WEB pages.
+___HTTP (HyperText Transport Protocol)___ - protocolo da camada de aplicação usado na www.
 
 HTTP usa TCP como transport layer (default: porta 80).
-Cliente: browser faz pedidos, receve e apresenta respostas.
+Cliente: browser faz pedidos, recebe e apresenta respostas.
 Server: responde a pedidos.
 
 É _stateless_ (não guarda informação acerca de pedidos anteriores).
@@ -128,20 +134,20 @@ Ciclo:
 
 ___HTTP Object___: identificado por um URL.
 ### Non-persistent HTTP
-Pelo menos um objeto é mandado pela conexão TCP.
+No máximo um objeto é mandado pela conexão TCP.
 Browser pode abrir conexões paralelas.
 HTTP/1.0.
 
-___RTT (round trip time)___: tempo para um pequeno pacote viajar até ao cliente e voltar.
+___RTT (round trip time)___: tempo para um pacote ir do cliente ao server e voltar.
 ###### Tempo de resposta:
 Um RTT para inicializar a conexão TCP.
 UM RTT par um HTTP request e alguns primeiros bytes da resposta HTTP.
-Tempo de transmissão do file.
-
+__2 Rtts__ por objeto
+Tempo de transmissão do file:
 ``TOTAL = 2 x RTT + transmit time``
 ### Persistent HTTP
 Multiples objets podem ser mandados por uma só TCP connection entre cliente e servidor.
-Com pipelining o broser pode mandar requests assim que os identificar. Ou seja, cliente manda request assim que encontra o objeto. (apenas 1 RTT para referenciar todos os objetos).
+Com pipelining o browser pode mandar requests assim que os identificar. Ou seja, cliente manda request assim que encontra o objeto. (apenas __1 RTT__ para referenciar todos os objetos).
 HTTP/1.1.
 Server deixa conexão aberta depois de enviar resposta.
 1 RTT por objetivo depois do primeiro.
@@ -150,7 +156,7 @@ Server deixa conexão aberta depois de enviar resposta.
 
 EXistem apenas 2 tipos: _request_ e _response_.
 
-Uma request tem uma __request line__ (indica protocolo e teipo de pedido) que pode ser um _GET_ ou um _POST_ ou _HEAD_ seguido de __header lines__. No final indica conteúdo da mensagem a ser transmitida.
+Uma request tem uma __request line__ (indica protocolo e teipo de pedido) que pode ser um _GET_ ou um _POST_ ou _HEAD_ seguido de __header lines__ (indicam flags). No final indica conteúdo da mensagem a ser transmitida.
 
 ````http
 POST /submeterFicheiro HTTP/1.1
@@ -186,11 +192,15 @@ Exemplos de status line codes:
 - `400 Bad Request` Server não soube interpretar.
 - `404 Not Found` Não encontrado no server.
 - `505 HTTP Version Not Supported
-###### HTTP 1.0
+
+#### GET Conditional
+
+Os browsers de hoje em dia guardam a informação em cache para que não tenha que ser tranferida de novo. Se forem atualizadfos inclui-se no header a informação `If-Modified-Since: <data>`.
+### HTTP 1.0
 É não persistente.
 Cada objeto tem que ter uma sessão de TCP diferente.
 
-###### HTTP 1.1
+### HTTP 1.1
 É persistente e assim permite transferência de vários objetos no mesmo TCP.
 Abre portas ao pipelining (cliente pode pedir logo o objeto em vez de esperar pela resposta do pedido antes de fazer o próximo).
 
@@ -206,17 +216,25 @@ Abre portas ao pipelining (cliente pode pedir logo o objeto em vez de esperar pe
 
 ![[Pasted image 20231120113824.png]]
 
-
-### Get Condicional
-
-Browsers guardam objetos em cache para caso sejam precisos novamente não seja necessário transferir o ficheiro de novo mas se forem atualizados:
-
-- Cliente inclui header `If-Modified-Since: <data>`
-- Servidor responde com `304 Not Modified` ou resposta normal.
-
 ## Cookies
 
 HTTP é stateless mas para casos como por exemplo um carrinho de compras é necessário cookies. Website interpreta e associa estado ou função a cada uma.
+
+Mantêm estado entre transações.
+
+4 componentes:
+
+1. Cookie header line of HTTP request message.
+2. Cookie header line in HTTP response message.
+3. Cookie file kept on user's host, managed by user's browser.
+4. Back-end database at web server.
+
+Trazem:
+
+- Autorizaação.
+- Shopping carts.
+- Recomendations
+- User session state.
 
 ## Web Caching: Proxy Server
 
@@ -314,20 +332,21 @@ convém ver no resumos.leic
 
 O que pode fazer:
 
-- Faz a tradução do Host name (www.ist.pt) para O IP através da porta 53.
+- Faz a tradução do Host name (www.ist.pt) para O IP através da porta 53 através de protocolo UDP.
 - Host aliasing: multiple to one.
 - Load distribuition: replica web servers (one to multiple).
 
-Não se cntraliza tudo num porqu eexistem várias desvantagens como  tráfico, single point of failure, distância da database e problemas de manutenção.
+Dois hostnames podem ter o mesmo IP.
+- Nome canónico: hostname oficail associado à máquina.
+- Nome de Alias: Outros nomes associados.
 
-Funciona por hierarquia portanto existe mais em cima a root que acede a um TLD (Top Level Domain) que acede a authoritave.
+Não se centraliza tudo num porque existem várias desvantagens como  tráfico, single point of failure, distância da database e problemas de manutenção.
 
-#### Root Name Servers
+Funciona por hierarquia portanto existe mais em cima a root (guarda info dos servidores mais altos na hierarquia) que acede a um TLD (Top Level Domain, guarda final: .pt, .edu, ...) que acede a authoritave (guarda inicio: website.com).
 
-Contactados pelo local name server que não pode resolver o name.
-Contacta authoritative name server se o mapping não for conhecido.
-Obtém o mapping.
-Retorna o mapping ao local name server.
+![[Pasted image 20240106154915.png]]
+
+![[Pasted image 20240106155112.png]]
 
 ### Queries
 
@@ -341,27 +360,20 @@ No local pede host. Vai à root que vai ao TLD que vai ao authoritative e depois
 
 ### DNS Caching
 
-Quando um server faz mapping, it _caches_ that mapping.
-Entradas da cache desparecem depois de um tempo.
-TLD servers por norma são cached em local named serves.
+Quando um servidor aprende um novo mapeamento guarda em cache para não ter que fazer a viagem de novo.
 
 ### DNS Records
 
 ___DNS___: DB que armazena resource records (RR)
 
-RR formar: (name, value, type, ttl)
+___RR format___: (name, value, type, ttl)
 
-##### Type = A:
-_name_ is hostname, _value_ is IP.
-
-##### Type = NS:
-_name_ is domain, _value_ is hostname of authoritative name.
-
-##### Type = CNAME:
-_name_ is alias name for some "canonical" name (um nome mais abeverbiado do que o que realmente é, _value_ is the canonical.
-
-##### Type = MX:
-_value_ is name of mailserver associado com _name_.
+- `TTL` significa "Time To Live" - diz durante quanto tempo é que a entrada é válida;
+- `nome` e `valor` dependem do `tipo`:
+    - Se `tipo` = A, `nome` = _hostname_ e `valor` = endereço IP;
+    - Se `tipo` = NS, `nome` = domínio (e.g. `foo.com`) e `valor` = _hostname_ do servidor de nome associado;
+    - Se `tipo` = CNAME, `nome` = alias para o nome canónico/real (e.g. `website.com` é na verdade `server123.backup1.outro.website.com`) e `valor` = nome canónico;
+    - Se `tipo` = MX, `nome` = _hostname_ e `valor` = nome do servidor de mail associado (e.g. enviar um e-mail para `contacto@website.com` vai comunicar com o servidor de mail em `mail.website.com`);
 
 ### DNS Protocol
 _query_ e _reply_ messages ambas com o mesmo _message format_.
@@ -376,12 +388,59 @@ __Flags__: query or reply, recursion desired, recursion available, reply is auth
 
 ### Dynamic DNS
 
-Permite atualizar o endereço IP em tempo real em vez de esperar alguns dias.
+Nosso IP do router de casa muda de IP periodicamente.
+Este tipo de DNS permite atualizar o endereço IP em tempo real em vez de esperar alguns dias.
 Outros sites na net podem estabelecer ligação à maquina sem pedir o IP.
 
 # P2P
-.leic
+Não há servidor sempre ligado, peers comunicam entre si.
+Não precisam de estar ligados continuamente e mudam de IP.
 
+Numa arquitetura Cliente-Sevidor se três clientes pedem um ficheiro. O servidor vai ter que enviar o mesmo ficheiro três vezes.
+
+Entre peers, o ficheiro é dividido em partes, os clientes comunicam entre si e os peers partilham informação entre si.
+
+## Tempos de distribuição para N clientes
+
+- __N__ o número de clientes;
+- __L__ o tamanho de um ficheiro;
+- __u(s)__ a velocidade de upload do servidor;
+- __u(i)__ a velocidade de upload do cliente, 0 ≤ i < N;
+- __d(i)__ a velocidade de download do cliente, 0 ≤ i < N.
+
+### Cliente-Servidor
+
+Do lado do servidor:
+- servidor tem que enviar N cópias de um ficheiro.
+- ___tempo de envio de um ficheiro___ é o tamanho a dividir pelo tempo de upload [ L / u(s) ].
+- ___tempo total de envio do servidor___ é [ N x tempo de envio de um ficheiro ].
+
+Do lado do cliente:
+- ___tempo de download de um ficheiro___ para um dado cliente i é [ L / d(i) ].
+- considera-se o pior caso de cliente com velocidade de download menor então o pior cliente demora [ L / min(d) ].
+
+No final temos que considerar o pior caso de tempo mais lento entre servidor a fazer upload dos ficheiros todos e co cliente a fazer download do ficheiro. Equação do tempo é então:
+
+![[Pasted image 20240106183722.png]]
+
+
+### P2P
+
+Do lado do servidor:
+- servidor só tem que enviar uma cópia [L / u(s) ].
+
+Do lado do cliente:
+- para um ___cliente i fazer download de um ficheiro___ [L / min(d) ].
+- mas agora o cliente tem que enviar a sua parte para todos os outros clientes e receber as suas partes restantes.
+- no ___total___ tem que ser feito o download de [ N x L ] bits pois existem N _peers_ e cada um tem que baixar o ficheiro todo (vindo de vários pacotes), que corresponde a L.
+- ___velocidade do download___ depende da velocidade de upload do servidor, [u(s)] e das velocidades de upload juntas de cada host [ somatório de u(i) ] emtão no final: [u(s) + somatório de u(i)].
+
+Temos que considerar o pior case então temos que considerar:
+1. O servidor fazer upload do file.
+2. o cliente mais lento fazer download do file.
+3. As partes do file serem todas enviadas para os clientes.
+
+![[Pasted image 20240106184508.png]]
 
 
 
