--- a/obsidian/RC/3. Transport Layer.md
+++ b/obsidian/RC/3. Transport Layer.md
@@ -1,6 +1,6 @@
 Comunicação de processos a correr em host diferentes.
 
-Host que envia parte mensagens em segmentos enviando para o network layer.
+Host que envia, parte mensagens em segmentos enviando para o network layer.
 Host que recebe remonta os segmentos.
 
 Sender:
@@ -19,6 +19,8 @@ Receiver:
 
 ### Multiplexing
 
+![[Pasted image 20240106193449.png]]
+
 Tanto para TCP/UDP um segmento tem 32 bits que inclui a porta de origem e de destino, header fields e a message.
 
 Host usa **IP** e a **port** para encaminhar segmentos para os sockets corretos.
@@ -28,7 +30,18 @@ DNS: 53 (UDP)
 
 ## UDP
 
-Não há controlo de congestionamento então pode haver emissão de dados mais rápido mas os dados podem ser perdidos ou serem feitos fora de ordem.
+
+__Vantagens:__
+- Simples.
+- Tem menos delay que os outros protocolos mais simples.
+- Tem o cabeçalho de segmento mais pequeno.
+- Não há controlo de congestionamento, então pode ser que exista envio de dados muito rápido.
+
+__Desvantagens:__
+- Segmentos podem perder-se.
+- Entrega pode ser feita fora de ordem.
+- Não existe uma conexão entre emissor e recetor.
+
 
 ```c
 struct addrinfo hints,*res;
@@ -40,17 +53,16 @@ MySocket = socket(res->ai_family, res->ai_socktype, res->ai_protocol);
 bind(fd, res->ai_addr, res->ai_addrlen);
 ```
 
-Identificados por um tuplo: (dest IP address, dest port number).
+Identificados por um tuplo: __(dest IP address, dest port number)__.
 
 Quando um host recebe um segmento UDP: Checka port e segmento correspondente ao socket.
 
 ![[Pasted image 20231201102417.png]]
 
-Para a transferência ser confiável em UDP:
+Para a transferência ser ___confiável___ em UDP:
 - adicionar reliability no application-layer.
 - error recovery
 - congestion control no application-leyer.
-
 #### Checksum
 
 Este campo serve para detetar erros no segmento transmitido.
@@ -110,21 +122,26 @@ Tem um _timeout_ já que os pacots podes nunca chegar. Se estiver à espera de u
 
 Ver slides das contas. página 26.
 
+Pode acontecer que se dê um timeout e não seja suposto já que a resposta até ia chegar mas estava a demorar.
 ##### Sliding Window
 
 ![[0003-StopAndWait.svg]]
 
 Eficiência de um Envio = (L / R) / ( (L / R) + RTT ) -> Muito ineficiente.
 Solução:
-Em vez de mandar um pacote e esperar por esse mandar no máximo N.
+Em vez de mandar um pacote e esperar por esse mandar no máximo N de uma vez e depois recebe-se todos juntos.
 
-##### Go-Back-N (.leic)
+##### Go-Back-N (.leic) FORMULAS
 
 O tamanho da janela tem de ser menor que a quantidade de número usados para numerar pacotes.
 
-##### Selective Repeat (.leic)
+O emissor vai reenviando os pacotes a partir do primeiro que falhou.
+
+##### Selective Repeat (.leic) FORMULAS
 
 números de pacotes / 2 menor que tamanho de janela.
+
+O emissor e recetor têm uma Sliding Window e estes apenas avançam quando o pacote mais antigo for ACK.
 
 
 
