--- a/obsidian/RC/4. Network Layer.md
+++ b/obsidian/RC/4. Network Layer.md
@@ -10,47 +10,101 @@ Routers examinam todos os headers em todos os IP datagrams que passam.
 Através de algoritmos determina para onde vai o socket.
 
 ##### Forwarding:
-Move de um input para um output.
+Move packets de um input para um output.
 
 ### Data plane
-Local.
-Per-router function.
+Local, Per-router function.
 Forwarding.
 
 ### Control plane
 Network.
 Routing.
-
-## Traditional Routing Algorithms (per-router Control plane)
+##### Traditional Routing Algorithms (per-router Control plane)
 Algoritmos individuais em todos os routers interagem entre si.
-
-## Software-Defined Networking (SDN) Control Plane
+##### Software-Defined Networking (SDN) Control Plane
 Controladores remotos instalam forwarding nos routers. Separa control do data.
+
+## Connection and connectionless
+
+Datagram disponibiliza ao network-layer um serviço sem conexão.
+Virtual Circuit (VC) tem que ter conexão.
+
+###### VC
+Call setup para cada call antes da data ser transmitida.
+Cada packet tem um VC identifier (não o destination host address).
+Todos os routers no caminho source-destination mantêm estado para cada conexão.
+Link e router resources (buffers) são alocados ao VC.
+
+###### Datagram
+Sem call ao network layer.
+Routers não guardam informação de estado das end-to-end conections já que não existe conceito de conexão.
+Os packets são forwarded para o destination host address. (pacotes com o mesmo destino podem tomar caminhos diferentes).
 
 # IPv4 Addressing Space
 N bits permitem 2^N endereços.
 
 ### How does ISP get a block of addresses?
-___ICCAN___ - allocates addresses throught IANA, manages DNS.
+___ICCAN___ - allocates addresses throught IANA ( Internet Assigned Numbers
+Authority ), manages DNS.
+
+___Interface___ - conexão entre um host/router e um meio físico. _Hosts_ com só uma interface e _routers_ com várias.
+Cada interface tem um endereço IP associado.
+
+#### Subnetting
 
 IP addresses have two components:
 
-- Network Identification (NetID)
-- Station interface identification (HostID)
+- Network Identification (NetID), identifica em que rede o computador se encontra.
+- Station interface identification (HostID), identifica, dentro da rede, a qual dos hosts é que o IP se refere.
 
 Stations com a mesma network comunicam diretamente.
 Stations com diferentes networks comunicam através de routers.
+##### Subnet Mask
+Endereço com o formato exatamente igual ao endereço IP que indica quais bits do IP representa a rede.
 
-### CIDR Classless IntereDomain Routing
-a.b.c.d/x
+Faz-se com um AND.
+Identifica-se olhando para o número de bits a 1 que a Submask tem.
+Estes bits indicam que parte do endereço IP representa a subrede.
+Os restantes dizem qual o _host_ dentro da subrede.
+
+Com esta máscara o _host_ consegue decidir se uma mensagem destinada
+a determinado IP deve ser entregue diretamente ao destinatário (já que os hosts estão na mesma rede usando MAC e protocolo da ligaçãop de dados), ou se deve ser entregue ao encaminhador (pela default gateway) para a fazer chegar à subrede de destino. 
+
+> [!EXAMPLE] Exemplo Submask
+> Considere-se o seguinte IP e a seguinte _Subnet Mask_:
+> 
+> - IP = `123.221.222.68`
+> - _Subnet Mask_ = `255.255.255.0`
+> 
+> Para determinar a subrede e o host da subrede do endereço IP,
+> 
+> 1. Transforma-se o IP para bits: `01111011.11011101.11011110.01000100`
+> 2. Transforma-se a _Subnet Mask_ para bits: `11111111.11111111.11111111.00000000`
+> 3. A _Subnet Mask_ tem os 24 primeiros bits "ligados". Isto significa que os primeiros 24 bits do IP representam a subrede. Os restantes bits (32 - 24 = 8) representam o _host_.
+> 
+> Portanto, dados esses IP e _subnet mask_, estamos a falar da subrede `01111011.11011101.11011110.00000000` = `123.221.222.0` e do _host_ `01000100` = `68` dessa subrede.
+
+#### CIDR - Classless IntereDomain Routing
+`a.b.c.d/x `
+x - número de bits ligados.
 subnet/host
 
-## Subnet
+> [!EXAMPLE] Exemplo de CIDR
+> Para o exemplo apresentado anteriormente, a máscara de rede `255.255.255.0` tem 24 bits ligados, por isso, para o endereço IP `123.221.222.68`, sabe-se que os 24 primeiros bits representam a rede e os 8 bits restantes representam o _host_, podendo tudo ser representado da forma `123.221.222.68/24`.
 
-Interfaces que podem chegar a outras sem um router.
-Dispositivos no mesmo subnet têm maior taxa de bits.
-Na host part restar menos bits.
+#### IPs Especiais
 
+No exemplo de cima a rede era representada por 24 bits. Existiam 32 - 24 = 8 bits para representar os _hosts_ dessa rede.
+Isso implica que existam 2⁸ = 256 hosts possíveis para essa rede.
+
+Dois deles não podem ser usados já que:
+
+- o ___primeiro___ host de rede - serve para identificar a subrede (123.221.222.0)
+- o ___último___ host de rede - é um endereço de broadcast. Quando um pacote é enviado para este endereço, todos os _hosts_ da subrede recebem. (123.221.222.255)
+
+Ainda um dos endereços terá que ser para o _router_.
+
+Endereço s acomeçar por `127` são _localhost_.
 ### IPv4 addresses
 
 127.0.0.1 - localhost
@@ -64,31 +118,70 @@ User only knows the application server address. For packets, to be transmitted w
 Obtém-se o endereço Ip através do Application Layer usando DNS.
 
 ## Forwarding Tables (slides)
-Bons exemplos.
+
+Existem para o _router_ saber encaminhar pacotes. Para um dado IP para que porta do router encaminhar.
+
+Para saber por onde encaminhar o endereço IP, o router:
+
+1. Aplica máscara de rede para saber qual é a sua network.
+2. Percorre a tabela, comparando as máscaras de rede com as que conhece.
+3. Se encontrar pelo menos um match, encia o pacote pela subnet mais específica.
+4. Se não encontrar envia para a _default route_.
+
+O pseudo-algoritmo do _router_ para fazer _forwarding_ de um pacote é o seguinte:
+
+1. Aplicar a máscara ao endereço IP de destino
+2. Para cada linha da tabela:
+3. Comparar a rede de destino com a máscara desta linha
+4. Se forem iguais, adicionar esta linha à lista de candidatos para encaminhar o pacote;
+5. Se não, ignorar esta linha;
+6. Escolher o caminho mais específico (mais longo):
+7. Se só existir um _match_, escolher esse;
+8. Se só existir um _match_ com um caminho mais específico, escolher esse;
+9. Se existirem vários _matches_ com a mesma especificidade, escolher a linha com a menor métrica.
+10. Enviar o pacote para a interface de rede (Pode ser um outro _router_ ou o destinatário final).
+
 
 
 ## IP datagram format
 
 ### IP fragmentation (foto)
 
-Transferência por segmentos:
-Cada bloco de dados tem um cabeçalho que ocupa um dado espaço e o tamanho total que esse bloco pode transportar.
-Por exemplo, o tamanho total da transferência de 2000 bytes teria que ser realizada por um bloco de cabeçalho 20 com o tamanho a tranportar de 1480 bytes (já que tem que ser menor que MTU = 1500 ) e num outro existe também um cabeçalho com 20 bytes e o resto a transportar correspondente a 520 bytes. No total vão ser transportados mais de 2000 bytes devido aos tamanos dos headers.
+> [!EXAMPLE] Exemplo IP Fragmentation
+> Transferência por segmentos:
+> Cada bloco de dados tem um cabeçalho que ocupa um dado espaço e o tamanho total que esse bloco pode transportar.
+> Por exemplo, o tamanho total da transferência de 2000 bytes teria que ser realizada por um bloco de cabeçalho 20 com o tamanho a tranportar de 1480 bytes (já que tem que ser menor que MTU = 1500 ) e num outro existe também um cabeçalho com 20 bytes e o resto a transportar correspondente a 520 bytes. No total vão ser transportados mais de 2000 bytes devido aos tamanos dos headers.
+> 
+> O offset só tem 13 bytes então o tamanho calculado tem que ser dividido por 8.
+> 
+> O valor a transportar de dados (offset) tem que ser multiplo de 8 então quando dividimos por 8 se o valor resultante for decimal na verdade o tranportado será esse valor sem a casa da décimas multipliado por 8. 
+> 
+> Dos 1480 são transportados num fragmento 20 do cabeçalho mais 776.
+> E noutro 20 mais o 1480-776.
+> 
+> Se não houver fragmentos não há offset.
 
-O offset só tem 13 bytes então o tamanho calculado tem que ser dividido por 8.
+Routre remove o packet da network original e retransmite para a seguinte network to caminho escolhido (___Store-and-Forward___), usando em cada network o seu formato apropriado.
 
-O valor a transportar de dados (offset) tem que ser multiplo de 8 então quando dividimos por 8 se o valor resultante for decimal na verdade o tranportado será esse valor sem a casa da décimas multipliado por 8. 
+##### MTU - Maximum Transmission Unit
+É o maior data link frame possível.
 
-Dos 1480 são transportados num fragmento 20 do cabeçalho mais 776.
-E noutro 20 mais o 1480-776.
+Diferentes link types -> diferentes MTU values.
 
-Se não houver fragmentos não há offset.
+IP datagrams maiores são fragmentados:
+- Um datagram passa a ser vários.
+- Juntos de novo no final do destino.
+- bits de IP header identificam e reordenam fragmentos usando `fragment offset + flags` .
 
+___Offset___ indica o número de fragmentos no início em múltiplos de 8.
 
 ## ICMP
 
-Tal como o IP tem um ICMP header e uma message, isto dentro do transporte do IP. 
-Echo request/reply (com uso de ping)
+Usado por hosts e routers para comunicar infomação com network-level:
+- Error reporting: unreachabel host, network, port, protocol.
+- Echo request/reply (used by ping).
+
+![[Pasted image 20240107031532.png]]
 
 #### Traceroute
 
